added initial run ies notebook

--- a/exercises/notebooks/SV_obsvals_weights_noise.ipynb
+++ b/exercises/notebooks/SV_obsvals_weights_noise.ipynb
@@ -9,7 +9,6 @@
    "source": [
     "%matplotlib inline\n",
     "import os\n",
-    "import shutil\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -139,7 +138,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prefixes = [\"wt\", \"aq\", \"lake-stage\", \"lake-swgw\", \"riv-flow\", \"riv-swgw\", \"diff\"]\n",
+    "prefixes = [\n",
+    "    \"wt\",\n",
+    "    \"aq\",\n",
+    "    \"lake-stage\",\n",
+    "    \"lake-swgw\",\n",
+    "    \"riv-flow\",\n",
+    "    \"riv-swgw\",\n",
+    "    \"diff1\",\n",
+    "    \"diff0\",\n",
+    "]\n",
     "for prefix in prefixes:\n",
     "    uobs = nnobs.loc[nnobs.usecol.str.contains(prefix), :].copy()\n",
     "    print(prefix, uobs.shape)\n",
@@ -172,7 +180,7 @@
    "outputs": [],
    "source": [
     "obs_dict = {}\n",
-    "hist_prefixes = [\"wt\", \"aq\", \"lake-stage\", \"diff\"]\n",
+    "hist_prefixes = [\"wt\", \"aq\", \"lake-stage\", \"diff1\", \"diff0\"]\n",
     "for prefix in hist_prefixes:\n",
     "    uobs = nnobs.loc[nnobs.usecol.str.startswith(prefix), :].copy()\n",
     "    print(uobs.usecol.unique())\n",
@@ -325,50 +333,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "21",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pst.control_data.noptmax = 6\n",
-    "pst.pestpp_options[\"ies_num_reals\"] = 250\n",
-    "pst.pestpp_options[\"ies_bad_phi_sigma\"] = 1.75\n",
-    "# pst.pestpp_options[\"ies_n_iter_reinflate\"] = [2, 999]\n",
-    "# pst.pestpp_options[\"ies_reinflate_num_reals\"] = [50, -50]\n",
-    "pst.pestpp_options[\"ies_multimodal_alpha\"] = 0.99\n",
-    "master_dir = \"master_ies_advanced_mm\"\n",
-    "if os.path.exists(master_dir):\n",
-    "    shutil.rmtree(master_dir)\n",
-    "os.makedirs(master_dir)\n",
-    "pst.write(os.path.join(working_d, \"pest.pst\"), version=2)\n",
-    "pyemu.os_utils.start_workers(\n",
-    "    working_d,\n",
-    "    \"pestpp-ies\",\n",
-    "    \"pest.pst\",\n",
-    "    num_workers=10,\n",
-    "    worker_root=master_dir,\n",
-    "    master_dir=master_dir,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "22",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "23",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": []
