--- a/exercises/notebooks/SV_setup_control_file.ipynb
+++ b/exercises/notebooks/SV_setup_control_file.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0",
+   "metadata": {},
+   "source": [
+    "# Build the pest interface and generate the Prior"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0",
+   "id": "1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1",
+   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,15 +36,23 @@
     "# safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-working_advanced-monthly\")\n",
     "\n",
     "\n",
-    "# safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-working-annual\")\n",
-    "safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-working-advanced-annual\")\n",
+    "safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-working-annual\")\n",
+    "# safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-working-advanced-annual\")\n",
     "assert os.path.exists(safe_org_d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3",
+   "metadata": {},
+   "source": [
+    "Make a copy of the safe set of model files and run mf6 in that directory"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,17 +86,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5",
+   "cell_type": "markdown",
+   "id": "7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Make a `PstFrom` instance"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,23 +113,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7",
+   "cell_type": "markdown",
+   "id": "9",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import importlib\n",
-    "\n",
-    "importlib.reload(helpers)\n",
-    "helpers.process_csv_files(model_ws=pf.new_d)\n",
-    "pf.add_py_function(\"helpers.py\", \"process_csv_files()\", is_pre_cmd=False)"
+    "We are using a model-post-processing function clean up and process csv output files.  We need to tell `PstFrom` to run that function after mf6 runs:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "helpers.process_csv_files(model_ws=pf.new_d)\n",
+    "pf.add_py_function(\"helpers.py\", \"process_csv_files()\", is_pre_cmd=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11",
+   "metadata": {},
+   "source": [
+    "Tell `PstFrom` to run mf6 as the \"model\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,9 +150,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "13",
+   "metadata": {},
+   "source": [
+    "Add the first set of model outputs as \"observations\" in the pest interface: \"swgw-longterm-means.csv\":"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,9 +176,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "15",
+   "metadata": {},
+   "source": [
+    "Now lets gather up all the output timeseries csv file we want to have as observations:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,13 +202,28 @@
     "obs_csv_files.extend(\n",
     "    [f for f in os.listdir(pf.new_d) if f.startswith(\"sv.sfr\") and f.endswith(\".csv\")]\n",
     ")\n",
+    "obs_csv_files.extend(\n",
+    "    [\n",
+    "        f\n",
+    "        for f in os.listdir(pf.new_d)\n",
+    "        if f.startswith(\"sv-budget\") and f.endswith(\".csv\")\n",
+    "    ]\n",
+    ")\n",
     "obs_csv_files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17",
+   "metadata": {},
+   "source": [
+    "Loop over them and add each one to the interface"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,9 +242,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "19",
+   "metadata": {},
+   "source": [
+    "Now some parameters.  Start with hk - the ole classic:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,9 +272,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "22",
+   "metadata": {},
+   "source": [
+    "We need to define some spatial correlation functions/information for the pilot points (for both interpolation from pilot points to the grid and also for the Prior covariance).  We will use a different correlation function for each property type:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,9 +295,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "24",
+   "metadata": {},
+   "source": [
+    "We will treat HK in layer 1 and 2 as same quantity - they will share pilot point multiplier parameters:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,9 +332,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "27",
+   "metadata": {},
+   "source": [
+    "Since the pilot points are designed to accomodate spatial heterogeneity, let's also include a layer-constant parameter to help sample a wider range of HK values:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,9 +358,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "29",
+   "metadata": {},
+   "source": [
+    "Do the same for HK in layer 3 and HK in layers 4 and 5 together"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,9 +420,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "32",
+   "metadata": {},
+   "source": [
+    "To let us see what the actual HK array that mf6 sees, let's add that array as a set of observatitons also:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,9 +444,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "34",
+   "metadata": {},
+   "source": [
+    "Setup a similar scheme of parameters to VK:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,9 +540,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "36",
+   "metadata": {},
+   "source": [
+    "And SS and sy (in layer 1 only):"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,9 +686,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "41",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,15 +742,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "28",
+   "id": "43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +757,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,9 +779,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "45",
+   "metadata": {},
+   "source": [
+    "Now build the interface and the control file:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,9 +797,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "47",
+   "metadata": {},
+   "source": [
+    "Check the `obsval` quantities in the \"* observation data\" section - what are those numbers:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obs = pf.pst.observation_data\n",
+    "obs.obsval"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49",
+   "metadata": {},
+   "source": [
+    "So if the `obsval` values are all the existing model output values, then if we run the model again just the same way, we should have a phi of zero - a great check!. Let's do that:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +858,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "34",
+   "id": "53",
    "metadata": {},
    "source": [
     "assert pst.phi < 1.e7"
@@ -710,7 +867,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,9 +879,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "55",
+   "metadata": {},
+   "source": [
+    "Now generate a Prior parameter ensemble (which the parameter bound and geostat info we passed to `PstFrom` above)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,9 +897,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "57",
+   "metadata": {},
+   "source": [
+    "We need to enforce parameter bounds on those realizations, save it and add an arg to the control file to tell ies to use it:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,9 +920,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "59",
+   "metadata": {},
+   "source": [
+    "Run the first realization in the ensemble:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,23 +943,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39",
+   "id": "61",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "40",
+   "cell_type": "markdown",
+   "id": "62",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Extra:  run a small prior monte carlo:"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41",
+   "id": "63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +976,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "64",
    "metadata": {},
    "outputs": [],
    "source": []
