--- a/exercises/notebooks/SV_run_ies.ipynb
+++ b/exercises/notebooks/SV_run_ies.ipynb
@@ -9,6 +9,7 @@
    "source": [
     "%matplotlib inline\n",
     "import os\n",
+    "import shutil\n",
     "import pyemu\n",
     "import helpers"
    ]
@@ -44,7 +45,7 @@
    "outputs": [],
    "source": [
     "pst.control_data.noptmax = 6\n",
-    "pst.pestpp_options[\"ies_num_reals\"] = 250\n",
+    "pst.pestpp_options[\"ies_num_reals\"] = 50\n",
     "pst.pestpp_options[\"ies_bad_phi_sigma\"] = 1.75\n",
     "# pst.pestpp_options[\"ies_n_iter_reinflate\"] = [2, 999]\n",
     "# pst.pestpp_options[\"ies_reinflate_num_reals\"] = [50, -50]\n",
@@ -60,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "master_dir = \"master_ies_advanced_mm\""
+    "pst.write(os.path.join(working_d, \"pest.pst\"), version=2)"
    ]
   },
   {
@@ -70,15 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pst.write(os.path.join(working_d, \"pest.pst\"), version=2)\n",
-    "# pyemu.os_utils.start_workers(\n",
-    "#     working_d,\n",
-    "#     \"pestpp-ies\",\n",
-    "#     \"pest.pst\",\n",
-    "#     num_workers=10,\n",
-    "#     worker_root=master_dir,\n",
-    "#     master_dir=master_dir,\n",
-    "# )"
+    "master_dir = \"master_ies_advanced_mm_smaller\""
    ]
   },
   {
@@ -88,13 +81,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "helpers.plot_ies_timeseries(master_dir)"
+    "if os.path.exists(master_dir):\n",
+    "    shutil.rmtree(master_dir)\n",
+    "os.makedirs(master_dir)\n",
+    "pyemu.os_utils.start_workers(\n",
+    "    working_d,\n",
+    "    \"pestpp-ies\",\n",
+    "    \"pest.pst\",\n",
+    "    num_workers=10,\n",
+    "    worker_root=master_dir,\n",
+    "    master_dir=master_dir,\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "helpers.plot_ies_timeseries(master_dir, noptmax=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,28 +123,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for tag in tags:\n",
-    "    helpers.plot_ies_properties(master_dir, tag)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "helpers.plot_ies_forecasts(master_dir)"
+    "for tag in tags:\n",
+    "    helpers.plot_ies_properties(master_dir, tag, noptmax=2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "helpers.plot_ies_forecasts(master_dir, noptmax=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
