--- a/exercises/notebooks/SV_advanced.ipynb
+++ b/exercises/notebooks/SV_advanced.ipynb
@@ -480,10 +480,10 @@
    "source": [
     "maw_spd = {0: [(idx, \"status\", \"inactive\") for idx in range(len(well_data))]}\n",
     "for n in range(1, nper):\n",
-    "    if n == 1:\n",
-    "        spd = [(idx, \"status\", \"active\") for idx in range(len(well_data))]\n",
-    "    else:\n",
-    "        spd = []\n",
+    "    # if n == 1:\n",
+    "    spd = [(idx, \"status\", \"active\") for idx in range(len(well_data))]\n",
+    "    # else:\n",
+    "    #    spd = []\n",
     "    row = temporal_df.iloc[n]\n",
     "    for idx, well_name in enumerate(well_data.keys()):\n",
     "        spd.append((idx, \"rate\", float(row[well_name])))\n",
