--- a/exercises/notebooks/SV_obsvals_weights_noise.ipynb
+++ b/exercises/notebooks/SV_obsvals_weights_noise.ipynb
@@ -196,7 +196,7 @@
     "            5.0 if oval > 0.1 else 1.0 for oval in hist_uobs.obsval\n",
     "        ]\n",
     "        obs.loc[hist_uobs.obsnme, \"standard_deviation\"] = [\n",
-    "            min(0.01, oval * 0.1) for oval in hist_uobs.obsval\n",
+    "            max(0.01, oval * 0.1) for oval in hist_uobs.obsval\n",
     "        ]\n",
     "        obs.loc[hist_uobs.obsnme, \"lower_bound\"] = 0.0\n",
     "    else:\n",
