--- a/exercises/notebooks/SV_run_ies.ipynb
+++ b/exercises/notebooks/SV_run_ies.ipynb
@@ -49,7 +49,9 @@
     "pst.pestpp_options[\"ies_bad_phi_sigma\"] = 1.75\n",
     "# pst.pestpp_options[\"ies_n_iter_reinflate\"] = [2, 999]\n",
     "# pst.pestpp_options[\"ies_reinflate_num_reals\"] = [50, -50]\n",
-    "pst.pestpp_options[\"ies_multimodal_alpha\"] = 0.99\n",
+    "# pst.pestpp_options[\"ies_multimodal_alpha\"] = 0.99\n",
+    "# pst.pestpp_options.pop(\"ies_obs_en\",None)\n",
+    "# pst.pestpp_options[\"ies_no_noise\"] = True\n",
     "\n",
     "pst.pestpp_options"
    ]
@@ -71,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "master_dir = \"master_ies_advanced_mm_smaller\""
+    "master_dir = \"master_ies_advanced_smaller_mawpars\""
    ]
   },
   {
@@ -101,13 +103,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "helpers.plot_ies_timeseries(master_dir, noptmax=2)"
+    "noptmax = None"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "helpers.plot_ies_timeseries(master_dir, noptmax=noptmax)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,22 +135,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for tag in tags:\n",
-    "    helpers.plot_ies_properties(master_dir, tag, noptmax=2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
-    "helpers.plot_ies_forecasts(master_dir, noptmax=2)"
+    "for tag in tags:\n",
+    "    helpers.plot_ies_properties(master_dir, tag, noptmax=noptmax)"
    ]
   },
   {
@@ -148,8 +150,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "helpers.plot_ies_forecasts(master_dir, noptmax=noptmax)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pst = pyemu.Pst(os.path.join(master_dir, \"pest.pst\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
