--- a/exercises/notebooks/SV_setup_control_file.ipynb
+++ b/exercises/notebooks/SV_setup_control_file.ipynb
@@ -36,8 +36,8 @@
     "# safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-working_advanced-monthly\")\n",
     "\n",
     "\n",
-    "safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-working-annual\")\n",
-    "# safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-working-advanced-annual\")\n",
+    "# safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-working-annual\")\n",
+    "safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-working-advanced-annual\")\n",
     "assert os.path.exists(safe_org_d)"
    ]
   },
@@ -746,6 +746,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "wel_files = [f for f in os.listdir(pf.new_d) if f.startswith(\"sv.maw_perioddata\")]\n",
+    "ismaw = True\n",
+    "if len(wel_files) == 0:\n",
+    "    wel_files = [f for f in os.listdir(pf.new_d) if f.startswith(\"sv.pwell.wel_\")]\n",
+    "    ismaw = False\n",
+    "assert len(wel_files) > 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if ismaw:\n",
+    "    for wel_file in wel_files:\n",
+    "        kper = int(wel_file.split(\".\")[1].split(\"_\")[-1]) - 1\n",
+    "        if kper == 0:\n",
+    "            continue\n",
+    "        print(wel_file)\n",
+    "        pf.add_parameters(\n",
+    "            wel_file,\n",
+    "            par_type=\"grid\",\n",
+    "            par_style=\"m\",\n",
+    "            par_name_base=\"welrate_kper:{0}\".format(kper),\n",
+    "            pargp=\"welrate_kper:{0}\".format(kper),\n",
+    "            mfile_skip=2,\n",
+    "            index_cols=[0],\n",
+    "            use_cols=[2],\n",
+    "            mfile_fmt=\"free\",\n",
+    "            upper_bound=3.0,\n",
+    "            lower_bound=0.0,\n",
+    "            transform=\"none\",\n",
+    "        )\n",
+    "else:\n",
+    "    for wel_file in wel_files:\n",
+    "        kper = int(wel_file.split(\".\")[2].split(\"_\")[-1]) - 1\n",
+    "        pf.add_parameters(\n",
+    "            wel_file,\n",
+    "            par_type=\"grid\",\n",
+    "            par_style=\"m\",\n",
+    "            par_name_base=\"welrate_kper:{0}\".format(kper),\n",
+    "            pargp=\"welrate_kper:{0}\".format(kper),\n",
+    "            mfile_skip=2,\n",
+    "            index_cols=[0, 1, 2],\n",
+    "            use_cols=[3],\n",
+    "            mfile_fmt=\"free\",\n",
+    "            upper_bound=3.0,\n",
+    "            lower_bound=0.0,\n",
+    "            transform=\"none\",\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "predwel_files = [\n",
     "    f\n",
     "    for f in os.listdir(pf.new_d)\n",
@@ -757,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44",
+   "id": "46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,32 +829,14 @@
     "        par_type=\"grid\",\n",
     "        index_cols=[0, 1, 2],\n",
     "        use_cols=[3],\n",
-    "        upper_bound=0,\n",
-    "        lower_bound=-500000,\n",
+    "        upper_bound=3.0,\n",
+    "        lower_bound=0.0,\n",
     "        pargp=\"predwel_kper:{0}\".format(kper),\n",
     "        par_name_base=\"predwel_kper:{0}\".format(kper),\n",
     "        transform=\"none\",\n",
-    "        initial_value=-30000,\n",
-    "        par_style=\"direct\",\n",
+    "        initial_value=1.0,\n",
+    "        par_style=\"m\",\n",
     "    )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "45",
-   "metadata": {},
-   "source": [
-    "Now build the interface and the control file:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "46",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pf.build_pst(filename=\"pest.pst\")"
    ]
   },
   {
@@ -801,7 +844,7 @@
    "id": "47",
    "metadata": {},
    "source": [
-    "Check the `obsval` quantities in the \"* observation data\" section - what are those numbers:"
+    "Now build the interface and the control file:"
    ]
   },
   {
@@ -811,13 +854,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "pf.build_pst(filename=\"pest.pst\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49",
+   "metadata": {},
+   "source": [
+    "Check the `obsval` quantities in the \"* observation data\" section - what are those numbers:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "obs = pf.pst.observation_data\n",
     "obs.obsval"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "49",
+   "id": "51",
    "metadata": {},
    "source": [
     "So if the `obsval` values are all the existing model output values, then if we run the model again just the same way, we should have a phi of zero - a great check!. Let's do that:"
@@ -826,7 +887,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50",
+   "id": "52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,7 +899,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51",
+   "id": "53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,7 +909,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52",
+   "id": "54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,32 +919,10 @@
   },
   {
    "cell_type": "raw",
-   "id": "53",
-   "metadata": {},
-   "source": [
-    "assert pst.phi < 1.e7"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "54",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "par = pst.parameter_data\n",
-    "\n",
-    "predpar = par.loc[par.pname == \"predwel\", :]\n",
-    "assert len(predpar) > 0\n",
-    "par.loc[predpar.parnme, \"partrans\"] = \"fixed\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "55",
    "metadata": {},
    "source": [
-    "Now generate a Prior parameter ensemble (which the parameter bound and geostat info we passed to `PstFrom` above)"
+    "assert pst.phi < 1.e7"
    ]
   },
   {
@@ -893,12 +932,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pe = pf.draw(num_reals=1000)"
+    "par = pst.parameter_data\n",
+    "\n",
+    "wellpars = par.loc[par.parnme.str.contains(\"wel\"), :]\n",
+    "assert len(wellpars) > 0\n",
+    "par.loc[wellpars.parnme, \"partrans\"] = \"fixed\""
    ]
   },
   {
    "cell_type": "markdown",
    "id": "57",
+   "metadata": {},
+   "source": [
+    "Now generate a Prior parameter ensemble (which the parameter bound and geostat info we passed to `PstFrom` above)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pe = pf.draw(num_reals=1000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59",
    "metadata": {},
    "source": [
     "We need to enforce parameter bounds on those realizations, save it and add an arg to the control file to tell ies to use it:"
@@ -907,7 +968,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58",
+   "id": "60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -921,7 +982,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59",
+   "id": "61",
    "metadata": {},
    "source": [
     "Run the first realization in the ensemble:"
@@ -930,7 +991,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60",
+   "id": "62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,14 +1004,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61",
+   "id": "63",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "62",
+   "id": "64",
    "metadata": {},
    "source": [
     "Extra:  run a small prior monte carlo:"
@@ -959,7 +1020,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63",
+   "id": "65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -976,7 +1037,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64",
+   "id": "66",
    "metadata": {},
    "outputs": [],
    "source": []
