--- a/exercises/notebooks/SV_run_ies.ipynb
+++ b/exercises/notebooks/SV_run_ies.ipynb
@@ -45,8 +45,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pst.control_data.noptmax = 3\n",
-    "pst.pestpp_options[\"ies_num_reals\"] = 50\n",
+    "pst.control_data.noptmax = 5\n",
+    "pst.pestpp_options[\"ies_num_reals\"] = 100\n",
     "pst.pestpp_options[\"ies_bad_phi_sigma\"] = 1.75\n",
     "# pst.pestpp_options[\"ies_n_iter_reinflate\"] = [2, 999]\n",
     "# pst.pestpp_options[\"ies_reinflate_num_reals\"] = [50, -50]\n",
@@ -74,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "master_dir = \"master_ies_base_smaller\""
+    "master_dir = \"master_ies_advanced\""
    ]
   },
   {
